Made verticalFlexRight box display: none on media query for all current pages, fixed alignment of posted by username text

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -60,6 +60,7 @@ ul {
     flex-direction: column;
     margin: 20px;
     width: 300px;
+    margin-top: 60px;
 }
 
 .verticalFlexLeft {
@@ -67,6 +68,7 @@ ul {
     flex-direction: column;
     margin: 20px;
     width: 600px;
+    margin-top: 60px;
 }
 
 .myContainer {
@@ -171,6 +173,9 @@ ul {
     border-bottom: 1px solid $darkBorder;
     display: flex;
     align-items: center;
+    position: fixed;
+    z-index: 100;
+    width: 100%;
 }
 
 .redditLogoContainer {
@@ -250,6 +255,20 @@ ul {
 
     .hideOnMediaQuery {
         display: none !important;
+    }
+
+    .verticalFlexLeft {
+        width: 100%;
+        margin: 10px;
+        margin-top: 60px;
+    }
+
+    .verticalBox {
+        border-radius: 0;
+    }
+
+    .createPostContentBox {
+        border-radius: 0;
     }
 }
 
